syntax = "proto3";

package response;

import "account/v2/dto/response/account-response.proto";

option java_multiple_files = true;
option java_package = "grpc.account.v2.dto.response";

message CheckAccountByIdResponse {
  bool is_exists = 1;
}